# ai-whatsapp-automation-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: config.yaml
data/: lost_package_policy.md  shipping_information.md
data/fake_data/: create_db.py  create_vdb.py
src/config/: config.py
src/core/: __init__.py  app.py  llm_router.py  lost_item_and_shipping_info.py  message_classification.py  process_tracking.py  update_user_profile.py  whatsapp_webhook.py
src/schemas/: __init__.py  message.py
src/utils/: __init__.py  clients.py  custom_logging.py  db.py
